examples/test/testpolicy4088.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4088
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key41: value19
      key35: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value37
          key4: value9
      podSelector:
        matchLabels:
          key28: value6
          key42: value17
          key49: value25
